--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
                 </div>
                 <div>
                     <h4 class="text-lg font-semibold text-white mb-4">Contact Us</h4>
-                    <p class="mb-2">123 Industrial Area, Noida, UP</p>
+                    <p class="mb-2">123 Industrial Area, Bawana, Delhi</p>
                     <p class="mb-2">Email: info@bhagwatiindustries.com</p>
                     <p>Phone: +91 12345 67890</p>
                 </div>
             </div>
             <div class="mt-12 border-t border-gray-700 pt-6 text-center text-sm">
-                <p>&copy; 2024 Bhagwati Industries. All Rights Reserved. Designed with Excellence.</p>
+                <p>&copy; 2025 Bhagwati Industries. All Rights Reserved. Designed with Excellence.</p>
             </div>
         </div>
     </footer>
@@ -194,4 +194,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
