--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
 </head>
 <body class="antialiased">
 
+    <body class="antialiased">
+<div id="preloader">
+    <div class="motor-container">
+        <div class="motor-assembly">
+            <div class="motor-casing"></div>
+            <div class="stator-windings"></div>
+            <div class="motor-blades">
+                <div class="blade"></div>
+                <div class="blade"></div>
+                <div class="blade"></div>
+                <div class="blade"></div>
+                <div class="blade"></div>
+            </div>
+            <div class="motor-hub"></div>
+            <div class="motor-front-grille"></div>
+        </div>
+    </div>
+</div>
+    <header class="header sticky top-0 z-50">
+
+
+
     <header class="header sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4">
             <div class="flex items-center justify-between">
@@ -194,5 +216,4 @@
     <script src="script.js"></script>
 
 </body>
-
 </html>
